for JPS JRE 16+ automatically apply "--add-opens" to jdk.compiler module to enable JPS features relying on reflection
GitOrigin-RevId: 53c3def4b252af3ff84ada6ea7d38fd1ea8cdcb3